@@ -12,7 +12,7 @@ INCLUDES = -I.. -I$(srcdir)/.. -I$(srcdir)/../collections -I$(srcdir)/../defobj 
 
 SRC = ActivityControl.m Arguments.m \
 	CompleteVarMap.m CompleteProbeMap.m \
-	CustomProbeMap.m CustomProbeMap.m DefaultProbeMap.m EmptyProbeMap.m \
+	CustomProbeMap.m DefaultProbeMap.m EmptyProbeMap.m \
 	MessageProbe.m Probe.m ProbeLibrary.m ProbeMap.m Swarm.m \
 	SwarmObject.m VarProbe.m probing.m swarm_rts_routines.m
 
@@ -21,8 +21,9 @@ libobjectbase_la_LDFLAGS = -version-info $(CURRENT):$(REVISION):$(AGE)
 
 noinst_HEADERS = local.h
 
-objectbase_HEADERS = ActivityControl.h Arguments.h CompleteProbeMap.h \
-	CompleteVarMap.h CustomProbeMap.h DefaultProbeMap.h EmptyProbeMap.h \
+objectbase_HEADERS = ActivityControl.h Arguments.h \
+	CompleteProbeMap.h CompleteVarMap.h \
+	CustomProbeMap.h DefaultProbeMap.h EmptyProbeMap.h \
 	MessageProbe.h Probe.h ProbeLibrary.h ProbeMap.h Swarm.h \
 	SwarmObject.h VarProbe.h probing.h swarm_rts_routines.h version.h
 
